Fixed an issue where genesys stat blocks had overflowing text.

--- a/css/genesys/genesys.css
+++ b/css/genesys/genesys.css
@@ -17,7 +17,7 @@
 .system-genesys {
     text-align: justify;
     font-family: 'Crimson Text', serif;
-    width: 108mm;
+    width: 329px;
 }
 
 .system-genesys h1, .system-genesys h2, .system-genesys h3, .system-genesys h4, .system-genesys h5, .system-genesys h6 { 
